--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,6 @@
 homepage: 'https://stape.io/'
 versions:
   - sha: 5793dbeb033c4e223612c214d311993fb357a7ce
+    changeNotes: EventName on logs is now dynamic.
+  - sha: 3a42563d3c6b9503844204a8cc2605ef723e1d04
     changeNotes: Initial release.
